--- a/nodeapi/package.json
+++ b/nodeapi/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "nodemon": "^1.18.3",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "twilio": "^3.19.2"
   }
 }
